<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.VocabularyGameActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingVertical="10dp">

    <TextView
        android:id="@+id/label_base_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/base_language_spinner"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/base_language_label"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:textSize="16sp"/>

    <Spinner
        android:id="@+id/base_language_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/label_base_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/label_base_language"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/label_target_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/label_base_language"
        app:layout_constraintEnd_toStartOf="@id/target_language_spinner"
        app:layout_constraintTop_toBottomOf="@id/label_base_language"
        android:layout_marginTop="15dp"
        android:text="@string/target_language_label"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <Spinner
        android:id="@+id/target_language_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/label_target_language"
        app:layout_constraintEnd_toEndOf="@id/base_language_spinner"
        app:layout_constraintBottom_toBottomOf="@id/label_target_language"
        android:layout_marginStart="5dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:text="@string/play_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>