...
        android:id="@+id/feedback_rounded_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/new_word_button"
        app:cardCornerRadius="4dp">

        <TextView
            android:id="@+id/feedback_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:paddingVertical="16dp"
...
