...
    <string name="sync_notification_concluded_text">Pajelingo is up to date now!</string>

    <string name="badge_notification_title">New badge conquered: %1$s</string>
    <string name="badges_notification_title">New badges conquered</string>
    <string name="badges_notification_text">You conquered the following badges: %1$s</string>

    <string name="play_button_text">Play</string>
    <string name="check_button_text">Check</string>

    <string name="new_word_button_text">New word</string>
    <string name="target_language_label">Select the target language</string>
    <string name="base_language_label">Select the base language</string>
    <string name="instruction_vocabulary_game">Provide a translation in\u0020</string>
    <string name="warning_base_target_len_eq">Base language and target language must not be the same</string>

    <string name="article_game_hint_input_text">Article</string>
    <string name="warning_no_resources">There are not enough resources to launch this game. Please, launch a synchro and then try again.</string>
    <string name="correct_answer_message"><b>Correct :)</b>\n\n</string>
    <string name="wrong_answer_message"><b>Wrong answer</b>\n\n</string>
...
