<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/root_view"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9"/>

        <TextView
            android:id="@+id/position_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="8dp"
            android:textSize="18sp"
            android:gravity="center"
            tools:text="1"
            />

        <TextView
            android:id="@+id/username_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_1"
            app:layout_constraintEnd_toStartOf="@id/guideline_2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="18sp"
            android:layout_marginVertical="8dp"
            android:gravity="center"
            tools:text="HumbertoBPF"/>


        <TextView
            android:id="@+id/score_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="8dp"
            android:textSize="18sp"
            android:gravity="center"
            tools:text="231"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>