...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="8dp"
    tools:context=".activities.RankingActivity">

    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/ranking_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <androidx.recyclerview.widget.RecyclerView
...
